prusti-tests/tests_old/parse/ui/error.stderr
error[E0425]: cannot find value `incorrect` in this scope
 --> $DIR/error.rs:6:5
  |
6 |     incorrect
  |     ^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
